fixed word wrapping

--- a/style.css
+++ b/style.css
@@ -44,6 +44,8 @@ body {
   justify-content: space-around;
   flex-direction: column;
   padding: 10px;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
 .previous-operand {
